top banner too wide slimmer view try to fix

--- a/vufind/web/interface/themes/responsive/css/main.css
+++ b/vufind/web/interface/themes/responsive/css/main.css
@@ -6158,7 +6158,7 @@ a.badge:focus {
         display: none;
     }
     .navbar-fixed-bottom .container {
-        width: auto;
+        width: 630px;
     }
 }
 @media (max-width: 480px) {
